Update coverage config and reformate code