@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.alaugks</groupId>
@@ -216,71 +217,154 @@
         <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
         <!--                            TEST COVERAGE                               -->
         <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
-        <!--  @see https://howtodoinjava.com/junit5/jacoco-test-coverage/           -->
         <!--  mvn test -P test-coverage -->
         <profile>
             <id>test-coverage</id>
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.2.5</version>
-                        <configuration>
-                            <argLine>
-                                --illegal-access=permit
-                            </argLine>
-                            <testFailureIgnore>true</testFailureIgnore>
-                            <forkCount>2</forkCount>
-                            <reuseForks>true</reuseForks>
-                            <argLine>${surefireArgLine}</argLine>
-                        </configuration>
-                    </plugin>
-                    <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <version>0.8.11</version>
                         <executions>
                             <execution>
-                                <id>default-prepare-agent</id>
+                                <id>before-unit-test-execution</id>
                                 <goals>
                                     <goal>prepare-agent</goal>
                                 </goals>
                                 <configuration>
-                                    <destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
-                                    <propertyName>surefireArgLine</propertyName>
+                                    <destFile>
+                                        ${project.build.directory}/jacoco-output/jacoco-unit-tests.exec
+                                    </destFile>
+                                    <propertyName>surefire.jacoco.args</propertyName>
                                 </configuration>
                             </execution>
                             <execution>
-                                <id>default-report</id>
+                                <id>after-unit-test-execution</id>
                                 <phase>test</phase>
                                 <goals>
                                     <goal>report</goal>
                                 </goals>
                                 <configuration>
-                                    <dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
-                                    <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+                                    <dataFile>
+                                        ${project.build.directory}/jacoco-output/jacoco-unit-tests.exec
+                                    </dataFile>
+                                    <outputDirectory>${project.reporting.outputDirectory}/jacoco
+                                    </outputDirectory>
                                 </configuration>
                             </execution>
                             <execution>
-                                <id>default-check</id>
+                                <id>before-integration-test-execution</id>
+                                <phase>pre-integration-test</phase>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                                <configuration>
+                                    <destFile>
+                                        ${project.build.directory}/jacoco-output/jacoco-integration-tests.exec
+                                    </destFile>
+                                    <propertyName>failsafe.jacoco.args</propertyName>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>after-integration-test-execution</id>
+                                <phase>post-integration-test</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                                <configuration>
+                                    <dataFile>
+                                        ${project.build.directory}/jacoco-output/jacoco-integration-tests.exec
+                                    </dataFile>
+                                    <outputDirectory>
+                                        ${project.reporting.outputDirectory}/jacoco-integration-test-coverage-report
+                                    </outputDirectory>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>merge-unit-and-integration</id>
+                                <phase>post-integration-test</phase>
+                                <goals>
+                                    <goal>merge</goal>
+                                </goals>
+                                <configuration>
+                                    <fileSets>
+                                        <fileSet>
+                                            <directory>${project.build.directory}/jacoco-output/
+                                            </directory>
+                                            <includes>
+                                                <include>*.exec</include>
+                                            </includes>
+                                        </fileSet>
+                                    </fileSets>
+                                    <destFile>${project.build.directory}/jacoco-output/merged.exec
+                                    </destFile>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>create-merged-report</id>
+                                <phase>post-integration-test</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                                <configuration>
+                                    <dataFile>${project.build.directory}/jacoco-output/merged.exec
+                                    </dataFile>
+                                    <outputDirectory>
+                                        ${project.reporting.outputDirectory}/jacoco-merged-test-coverage-report
+                                    </outputDirectory>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>check</id>
+                                <phase>verify</phase>
                                 <goals>
                                     <goal>check</goal>
                                 </goals>
                                 <configuration>
                                     <rules>
                                         <rule>
-                                            <element>BUNDLE</element>
+                                            <element>CLASS</element>
+                                            <excludes>
+                                                <exclude>*Test</exclude>
+                                                <exclude>*IT</exclude>
+                                            </excludes>
                                             <limits>
                                                 <limit>
-                                                    <counter>COMPLEXITY</counter>
+                                                    <counter>LINE</counter>
                                                     <value>COVEREDRATIO</value>
-                                                    <minimum>0.70</minimum>
+                                                    <minimum>100%</minimum>
                                                 </limit>
                                             </limits>
                                         </rule>
                                     </rules>
+                                    <dataFile>${project.build.directory}/jacoco-output/merged.exec
+                                    </dataFile>
                                 </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.22.2</version>
+                        <configuration>
+                            <argLine>${surefire.jacoco.args}</argLine>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>2.22.2</version>
+                        <configuration>
+                            <argLine>${failsafe.jacoco.args}</argLine>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
                             </execution>
                         </executions>
                     </plugin>
